--- a/palindromeChecker/style.css
+++ b/palindromeChecker/style.css
@@ -1,114 +1,99 @@
-*{
-  background-color: #0a0a23;
-  margin:0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 :root {
   --main-margin: 20px;
   --main-color: white;
   --border-radius: 20px;
 }
 
-body{
+body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
   color: var(--main-color);
   height: 100vh;
+  background-color: #0a0a23;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.app_container{
-  margin:0 auto;
+.app_container {
+  margin: 0 auto;
   margin-top: 100px;
-  display:flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   max-width: 450px;
 }
 
-.project-logo{
+.project-logo {
   height: 30px;
   margin-bottom: var(--main-margin);
 }
 
-.project-heading{
+.project-heading {
   font-size: 40px;
   padding: 10px 0;
   margin-bottom: var(--main-margin);
 }
 
-.checker_container{
-padding: 20px;
-width:100%;
-border-radius:  var(--border-radius);
-padding:20px;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-wrap: wrap;
-}
-
-.checker_container,
-.checker_text,
-.checker_input,
-.checker_result,
-.input-wraper {
+.checker_container {
+  padding: 20px;
+  width: 100%;
+  border-radius: var(--border-radius);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
   background-color: var(--main-color);
-  color:black;
+  color: black;
+  box-shadow: 0 6px 6px #002ead;
 }
 
-.checker_text{
+.checker_text {
   margin-bottom: 20px;
 }
 
-.input-wraper{
-  display:flex;
-  flex-wrap:nowrap;
-  width:100%;
+.input-wraper {
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
   justify-content: center;
 }
 
-.checker_input{
-  border:none;
+.checker_input {
+  border: none;
   border-bottom: #5a01a7 solid 2px;
-  padding:10px;
-  width:250px;
+  padding: 10px;
+  width: 250px;
   margin-right: 10px;
 }
 
-.checker_btn{
-  width:90px;
+.checker_btn {
+  width: 90px;
   background-color: #5a01a7;
   color: var(--main-color);
   padding: 10px;
   border-radius: 15px;
 }
 
-.checker_result{
-  margin-top:10px;
+.checker_result {
+  margin-top: 10px;
   font-size: 22.4px;
 }
 
-.definition_container,
-.definition_text,
-span,
-i{
-  background-color: #00471b;
-  
-}
-.definition_container{
-border-radius: var(--border-radius);
-  margin-top: var(--main-margin);
-  padding: 20px;
-  font-size: 20.8px;
-}
-
-.definition_text{
+.user-input {
   text-align: center;
 }
 
-/* span{
-  display:block;
-} */
+.definition_container {
+  border-radius: var(--border-radius);
+  margin-top: var(--main-margin);
+  padding: 20px;
+  font-size: 20.8px;
+  background-color: #00471b;
+}
+
+.definition_text {
+  text-align: center;
+}
